--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,10 +1,10 @@
 [uwsgi]
 env=DJANGO_SETTINGS_MODULE=reviewboard.settings
-pymodule-alias=settings_local=/var/www/reviewboard/conf/settings_local.py
+pymodule-alias=settings_local=/var/www/{{DOMAIN}}/conf/settings_local.py
 module = django.core.handlers.wsgi:WSGIHandler()
 master=true
 http=0.0.0.0:8000
-static-map=/static=/var/www/reviewboard/htdocs/static
-static-map=/media=/var/www/reviewboard/htdocs/media
-static-map=/errordocs=/var/www/reviewboard/htdocs/errordocs
+static-map=/static=/var/www/{{DOMAIN}}/htdocs/static
+static-map=/media=/var/www/{{DOMAIN}}/htdocs/media
+static-map=/errordocs=/var/www/{{DOMAIN}}/htdocs/errordocs
 static-safe=/usr/local/lib/python2.7/dist-packages/
